# website-scraper

./: Cargo.toml  README.md  pyproject.toml
example/: run.py
src/: lib.rs  scrape_process.rs
website_scraper/: __init__.py  website_scraper.pyi
