[package]
name = "website_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "website_scraper"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
pyo3-asyncio = { version = "0.16", features = ["attributes", "tokio-runtime"] }
boilerpipe = "0.6.0"
fantoccini = "0.19.3"
tokio = { version = "1.20.1", features = ["full"] }
lingua = { version = "1.4.0", default-features = false, features = ["french", "italian", "spanish", "english"] }
reqwest = { version = "0.11", features = ["json"] }
# tonic = "0.8.0"
select = "0.5.0"
serde_json = "1.0.85"
