[tool.poetry]
name = "website_scraper"
version = "1.0.0"
description = ""
authors = ["Theo Mathieu"]


[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "website_scraper"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
]

[tool.maturin]
python-source = "python"